<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cardBackground"
    >

    <ImageButton
        android:id="@+id/CloseButtonFrage"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/contentDescriptionClosebutton"
        android:gravity="end"
        android:src="@drawable/closebutton" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/HeadlineQuestion"
                android:text="@string/headline_qcard"
                android:textColor="@color/cardText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/headline_marginTop"
                android:layout_marginStart="@dimen/card_marginStart"
                android:layout_marginBottom="6dp"
                android:textSize="@dimen/headline_textSize"
                />

            <TextView
                android:id="@+id/Question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cardText"
                android:text="@string/Lorem_ipsum"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/text_textSize"
                android:layout_marginStart="@dimen/card_marginStart"
                android:layout_marginEnd="@dimen/card_marginStart"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/QuestionField"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_marginStart"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="60dp"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@android:color/secondary_text_dark"
                    android:textSize="@dimen/text_textSize"
                    android:hint="@string/questionHint"
                    android:autofillHints="@string/autofillhints"
                    />

                <Button
                    android:id="@+id/ApplyButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/questionButton"
                    android:textSize="@dimen/text_textSize"
                    android:textAllCaps="false"
                    android:background="@color/cardBackground"
                    android:layout_marginTop="@dimen/buttonAbstandOben"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="@dimen/card_marginStart"
                    android:layout_marginBottom="60dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>