<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cardBackground"
    >

    <ImageButton
        android:id="@+id/CloseButtonHint"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/closebutton"
        android:layout_gravity="end"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="end"
        android:contentDescription="@string/contentDescriptionClosebutton"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/HeadlineHinweis"
                android:text="@string/headline_hcard"
                android:textColor="@color/cardText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/headline_marginTop"
                android:layout_marginStart="@dimen/card_marginStart"
                android:layout_marginBottom="6dp"
                android:textSize="@dimen/headline_textSize"
                />

            <TextView
                android:id="@+id/Hinweis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cardText"
                android:text="@string/Lorem_ipsum"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/text_textSize"
                android:layout_marginStart="@dimen/card_marginStart"
                android:layout_marginEnd="@dimen/card_marginStart"
                />

            <Button
                android:id="@+id/FoundButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hcard_button"
                android:textAllCaps="false"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@color/cardBackground"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/buttonAbstandOben"
                android:layout_marginBottom="60dp"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>